<resources>
    <string name="app_name">AndroidTask</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="dont">I DONT HAVE AN ACCOUNT YET ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="quicktechnologyz_gmail_com">quicktechnologyz@gmail.com</string>
    <string name="_09091458969">09091458969</string>
    <string name="adefuwa">Adefuwa</string>
    <string name="oluwaponmile">Oluwaponmile</string>
</resources>