<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_margin="3dp"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="12sp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:text="@string/first_name"
            android:layout_height="match_parent"/>


        <TextView
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:text="Oluwaponmile Adefuwa"
            android:id="@+id/first_name"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="12sp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:text="@string/last_name"
            android:layout_height="match_parent"/>


        <TextView
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:text="Adefuwa"
            android:id="@+id/last_name"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="12sp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:text="@string/email_address"
            android:layout_height="match_parent"/>


        <TextView
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:text="Adefuwa"
            android:id="@+id/email_address"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="12sp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:text="@string/phone_number"
            android:layout_height="match_parent"/>


        <TextView
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:text="09091458969"
            android:id="@+id/phone_number"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>